feat: Adiciona overlay de carregamento global e otimiza o gerenciamento de produtos, categorias, pedidos e funcionalidades de marketing.